testsuite/tests/typing-extension-constructor/test.ocaml.reference
type t = ..
type t += A
- : extension_constructor = <abstr>
- : extension_constructor = <abstr>
module M : sig type extension_constructor = int end
Line 2, characters 1-27:
2 | ([%extension_constructor A] : extension_constructor);;
     ^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type extension_constructor
       but an expression was expected of type M.extension_constructor = int

